修复API地址配置：使用相对路径替代localhost
- 将API_URL从硬编码的localhost改为相对路径'/api'
- 解决从外网访问时无法调用API的问题
- 现在可以从任何地址访问系统（内网IP、公网IP、域名）

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -660,7 +660,7 @@
     </div>
     
     <script>
-        const API_URL = 'http://localhost:5000/api';
+        const API_URL = '/api';  // 使用相对路径，自动适配服务器地址
         let token = localStorage.getItem('token');
         let currentUser = null;
         let currentJobId = null;
