--- a/frontend/index.html
+++ b/frontend/index.html
@@ -684,7 +684,7 @@
     </div>
     
     <script>
-        const API_URL = 'http://localhost:5000/api';
+        const API_URL = '/api';  // 使用相对路径，自动适配服务器地址
         let currentJobId = null;
         let educationCount = 0;
         let experienceCount = 0;
