优化简历提交和下载功能
前端改进（index.html）：
- 优化提交成功提示信息，显示倒计时
- 提交成功后2秒自动关闭弹窗并清除提示
- 添加✓符号增强视觉反馈

前端改进（admin.html）：
- 修复简历下载功能
- 添加DOM操作确保下载触发
- 下载后自动清理URL对象
- 改进错误提示显示详细信息

后端改进（applications.py）：
- 下载文件使用有意义的命名：姓名_职位_简历.后缀
- 添加download_name参数支持中文文件名
- 改善用户体验

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -905,10 +905,11 @@
                 const result = await response.json();
                 
                 if (response.ok) {
-                    showMessage('success', '申请提交成功！我们会尽快与您联系。');
+                    showMessage('success', '✓ 申请提交成功！我们会尽快与您联系。窗口将在2秒后自动关闭...');
                     e.target.reset();
                     setTimeout(() => {
                         document.getElementById('jobModal').style.display = 'none';
+                        document.getElementById('messageContainer').innerHTML = '';
                     }, 2000);
                 } else {
                     showMessage('error', result.error || '提交失败，请重试');
@@ -997,7 +998,7 @@
                 const result = await response.json();
                 
                 if (response.ok) {
-                    showMessage('success', '申请提交成功！我们会尽快与您联系。');
+                    showMessage('success', '✓ 申请提交成功！我们会尽快与您联系。窗口将在2秒后自动关闭...');
                     e.target.reset();
                     document.getElementById('educationFields').innerHTML = '';
                     document.getElementById('experienceFields').innerHTML = '';
@@ -1005,6 +1006,7 @@
                     experienceCount = 0;
                     setTimeout(() => {
                         document.getElementById('jobModal').style.display = 'none';
+                        document.getElementById('messageContainer').innerHTML = '';
                     }, 2000);
                 } else {
                     showMessage('error', result.error || '提交失败，请重试');
