--- a/frontend/index.html
+++ b/frontend/index.html
@@ -448,7 +448,7 @@
         <section id="contact" style="background: white; padding: 2rem; border-radius: 8px; margin-top: 2rem; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
             <h2 style="color: #d65009; margin-bottom: 1.5rem;">联系我们</h2>
             <div style="line-height: 2; color: #666; font-size: 1.05rem;">
-                <p><strong>联系人：</strong>刘先生/女士</p>
+                <p><strong>联系人：</strong>刘女士</p>
                 <p><strong>联系电话：</strong>17775662859</p>
                 <p><strong>电子邮箱：</strong>646214256@qq.com</p>
                 <p><strong>工作地址：</strong>隆回县桃花坪街道大桥路50号（原隆回县药材公司大院内）</p>
